<resources>
    <string name="app_name">Lance os Dados</string>
    <string name="dice_1">dado 1</string>
    <string name="dice_2">dado 2</string>
    <string name="play">Jogar</string>
    <string name="erro_tipo_dado">Tipo de dado desconhecido. Esperado 6 ou 8 lados</string>
    <string name="play_six_faces_dice">Regular</string>
    <string name="play_eight_faces_dice">Avançado</string>
    <string name="unknown_user">Meu querido</string>
    <string name="name">Informe o seu nome</string>
    <string name="welcome">Bem vindo, %s</string>
    <string name="share">Share</string>
    <string name="dice">Dice</string>
    <string name="register">Registrar e jogar!</string>
    <string name="share_fail">Ops! Parece que algo deu errado. Whatsapp nâo encontrado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>