<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThrowDiceFragment">

    <TextView
        android:id="@+id/txtPlayerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="PlayerName" />

    <ImageView
        android:id="@+id/imgFirstDice"
        android:layout_width="0dp"
        android:layout_height="381dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="48dp"
        android:contentDescription="@string/dice"
        android:scaleType="fitCenter"
        android:src="@drawable/dice_6"
        app:layout_constraintBottom_toTopOf="@+id/btnThrowSixFacesDice"
        app:layout_constraintEnd_toStartOf="@+id/imgSecondDice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPlayerName" />

    <ImageView
        android:id="@+id/imgSecondDice"
        android:layout_width="0dp"
        android:layout_height="381dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="48dp"
        android:contentDescription="@string/dice"
        android:scaleType="fitCenter"
        android:src="@drawable/dice8_8"
        app:layout_constraintBottom_toTopOf="@+id/btnThrowEightFacesDice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgFirstDice"
        app:layout_constraintTop_toBottomOf="@id/txtPlayerName" />


    <Button
        android:id="@+id/btnThrowSixFacesDice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/green_red_color_state"
        android:text="@string/play_six_faces_dice"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnThrowEightFacesDice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFirstDice" />

    <Button
        android:id="@+id/btnThrowEightFacesDice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/green_red_color_state"
        android:text="@string/play_eight_faces_dice"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnThrowSixFacesDice"
        app:layout_constraintTop_toBottomOf="@+id/imgSecondDice" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:contentDescription="@string/share"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThrowSixFacesDice"
        app:srcCompat="@drawable/ic_twotone_share_24"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="564dp" />


</androidx.constraintlayout.widget.ConstraintLayout>